--- a/Views/Shared/_LayoutHome.cshtml
+++ b/Views/Shared/_LayoutHome.cshtml
@@ -80,5 +80,6 @@
         </script>
     }
     <script src="~/js/giohang.js"></script>
+    <script src="~/js/function.js" asp-append-version="true"></script>
 </body>
 </html>
