--- a/Areas/Admin/Views/SanPhams/Index.cshtml
+++ b/Areas/Admin/Views/SanPhams/Index.cshtml
@@ -6,14 +6,36 @@
 
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h2 class="text-gold"><i class="fas fa-box me-2"></i>Quản lý Sản phẩm</h2>
-    <a asp-action="Create" class="btn btn-gold">
+    <a asp-action="Create" class="btn btn-primary">
         <i class="fas fa-plus me-2"></i>Thêm sản phẩm mới
     </a>
 </div>
+<div class="modal fade" id="addSanPham">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
 
+            <!-- Modal Header -->
+            <div class="modal-header">
+                <h4 class="modal-title fw-bold">Thêm sản phẩm</h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+            </div>
+
+            <!-- Modal body -->
+            <div class="modal-body">
+                Modal body..
+            </div>
+
+            <!-- Modal footer -->
+            <div class="modal-footer">
+                <button type="button" class="btn btn-success" data-bs-dismiss="modal">Thêm</button>
+            </div>
+
+        </div>
+    </div>
+</div>
 <div class="admin-table">
     <div class="table-responsive">
-        <table class="table table-dark table-hover mb-0">
+        <table class="table table-hover mb-0">
             <thead>
                 <tr class="text-center">
                     <th width="100">Hình ảnh</th>
@@ -36,11 +58,9 @@
                         </td>
                         <td>
                             <div class="fw-bold text-center overflow-hidden">@item.TenSanPham</div>
-                            <small class="text-muted">@item.HangSanXuat</small>
                         </td>
                         <td>
-                            <div class="text-success fw-bold fst-italic text-end" style="width:max-content;">@Html.FormatPrice(item.GiaBan)</div>
-                            
+                            <div class="text-success fw-bold fst-italic text-end" style="width:max-content;">@Html.FormatPrice(item.GiaKhuyenMai)</div>
                         </td>
                         <td class="text-end">
                             <span class="badge @(item.SoLuongTon > 0 ? "bg-success" : "bg-danger")">
