tạo index cho danh sách hóa đơn

--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -95,11 +95,11 @@
                     </a>
                     <div class="collapse" id="salesManagement">
                         <div class="submenu">
-                            <a class="nav-link" asp-area="Admin" asp-controller="KhachHang" asp-action="Index">
+                            <a class="nav-link" asp-area="Admin" asp-controller="KhachHangs" asp-action="Index">
                                 <i class="fas fa-users"></i>
                                 <span>Khách hàng</span>
                             </a>
-                            <a class="nav-link" asp-area="Admin" asp-controller="DonHang" asp-action="Index">
+                            <a class="nav-link" asp-area="Admin" asp-controller="HoaDonBans" asp-action="Index">
                                 <i class="fas fa-receipt"></i>
                                 <span>Đơn hàng</span>
                             </a>
