--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -79,6 +79,10 @@
                                 <i class="fas fa-percentage"></i>
                                 <span>Khuyến mãi</span>
                             </a>
+                            <a class="nav-link" asp-area="Admin" asp-controller="TonKho" asp-action="Index">
+                                <i class="fa-solid fa-cubes"></i>
+                                <span>Tồn kho</span>
+                            </a>
                         </div>
                     </div>
                 </div>
