--- a/Views/GioHangs/Index.cshtml
+++ b/Views/GioHangs/Index.cshtml
@@ -64,7 +64,7 @@
                                     <input type="hidden" name="SanPhamId" value="@item.SanPhamId" />
                                     <button type="button" class="btn btn-outline-danger"
                                             id="delete-btn"
-                                            onclick="confirmDelete(event,this,'@item.TenSanPham')">
+                                            onclick="confirmDeleted(event,this,'@item.TenSanPham')">
                                         <i class="bi bi-trash"></i>
                                     </button>
                                 </form>
